--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -397,7 +397,6 @@
     <Compile Include="Exporters\Spreadsheet\ExporterCSVTrajectory.cs" />
     <Compile Include="Exporters\Spreadsheet\ExporterJSON.cs" />
     <Compile Include="Exporters\Spreadsheet\ExporterXSLX.cs" />
-    <Compile Include="Metadata\Drawings\Styling\StyleElementFontSize.cs" />
     <Compile Include="Metadata\Interfaces\IDrawingHostView.cs" />
     <Compile Include="Measurement\Geometry\AngleOptions.cs" />
     <Compile Include="Measurement\Geometry\Circle.cs" />
@@ -429,6 +428,27 @@
     <Compile Include="Measurement\Plotting\TimeModel.cs" />
     <Compile Include="Measurement\Plotting\TimeSeriesPlotData.cs" />
     <Compile Include="Measurement\Plotting\TimeSeriesPlotSpecification.cs" />
+    <Compile Include="Metadata\Styling\AbstractStyleElement.cs" />
+    <Compile Include="Metadata\Drawings\Helpers\ArrowHelper.cs" />
+    <Compile Include="Metadata\Styling\Types\Bicolor.cs" />
+    <Compile Include="Metadata\Styling\DrawingStyle.cs" />
+    <Compile Include="Metadata\Styling\Types\LineEnding.cs" />
+    <Compile Include="Metadata\Styling\Types\LineShape.cs" />
+    <Compile Include="Metadata\Styling\Types\PenShape.cs" />
+    <Compile Include="Metadata\Styling\Editors\StyleElementColor.cs" />
+    <Compile Include="Metadata\Styling\Editors\StyleElementFontSize.cs" />
+    <Compile Include="Metadata\Styling\Editors\StyleElementInt.cs" />
+    <Compile Include="Metadata\Styling\Editors\StyleElementLineEnding.cs" />
+    <Compile Include="Metadata\Styling\Editors\StyleElementLineShape.cs" />
+    <Compile Include="Metadata\Styling\Editors\StyleElementLineSize.cs" />
+    <Compile Include="Metadata\Styling\Editors\StyleElementPenShape.cs" />
+    <Compile Include="Metadata\Styling\Editors\StyleElementPenSize.cs" />
+    <Compile Include="Metadata\Styling\Editors\StyleElementToggle.cs" />
+    <Compile Include="Metadata\Styling\Editors\StyleElementTrackShape.cs" />
+    <Compile Include="Metadata\Styling\StyleMaster.cs" />
+    <Compile Include="Metadata\Styling\StyleToggleVariant.cs" />
+    <Compile Include="Metadata\Styling\Types\TrackShape.cs" />
+    <Compile Include="Metadata\Styling\Types\TrackShapeConverter.cs" />
     <Compile Include="PointerManager.cs" />
     <Compile Include="ScreenPointerManager.cs" />
     <Compile Include="Metadata\Drawings\DrawingRectangle.cs" />
@@ -437,12 +457,6 @@
     <Compile Include="Metadata\Drawings\GenericPosture\Constraints\GenericPostureConstraintLockedInPlace.cs" />
     <Compile Include="Metadata\Drawings\GenericPosture\GenericPostureCircle.cs" />
     <Compile Include="Metadata\Drawings\GenericPosture\GenericPosturePoint.cs" />
-    <Compile Include="Metadata\Drawings\Styling\Bicolor.cs" />
-    <Compile Include="Metadata\Drawings\Styling\PenShape.cs" />
-    <Compile Include="Metadata\Drawings\Styling\StyleElementPenShape.cs" />
-    <Compile Include="Metadata\Drawings\Styling\StyleElementToggle.cs" />
-    <Compile Include="Metadata\Drawings\Styling\StyleToggleVariant.cs" />
-    <Compile Include="Metadata\Drawings\Styling\TrackShapeConverter.cs" />
     <Compile Include="Metadata\DrawingToolbar\DrawingTool.cs" />
     <Compile Include="Metadata\DrawingToolbar\DrawingToolbarImporter.cs" />
     <Compile Include="Metadata\DrawingToolbar\DrawingToolbarPresenter.cs" />
@@ -516,12 +530,7 @@
     <Compile Include="Metadata\Drawings\DrawingPolyline.cs" />
     <Compile Include="Metadata\Events\KeyframeEventArgs.cs" />
     <Compile Include="Metadata\Events\MultiDrawingItemEventArgs.cs" />
-    <Compile Include="Metadata\Drawings\GraphicsExtensions.cs" />
-    <Compile Include="Metadata\Drawings\Styling\ArrowHelper.cs" />
-    <Compile Include="Metadata\Drawings\Styling\LineEnding.cs" />
-    <Compile Include="Metadata\Drawings\Styling\LineShape.cs" />
-    <Compile Include="Metadata\Drawings\Styling\StyleElementLineShape.cs" />
-    <Compile Include="Metadata\Drawings\Styling\TrackShape.cs" />
+    <Compile Include="Metadata\Drawings\Helpers\GraphicsExtensions.cs" />
     <Compile Include="Importers\OpenPose\OpenPoseFrame.cs" />
     <Compile Include="Importers\OpenPose\OpenPosePerson.cs" />
     <Compile Include="Importers\OpenPose\MetadataImporterOpenPose.cs" />
@@ -674,13 +683,12 @@
     <Compile Include="Metadata\Drawings\AbstractMultiDrawing.cs" />
     <Compile Include="Metadata\Drawings\DrawingNumberSequenceItem.cs" />
     <Compile Include="Metadata\Drawings\DrawingNumberSequence.cs" />
-    <Compile Include="Metadata\Drawings\BoundingBox.cs" />
+    <Compile Include="Metadata\Drawings\Helpers\BoundingBox.cs" />
     <Compile Include="Metadata\Drawings\DrawingBitmap.cs" />
     <Compile Include="Metadata\Drawings\DrawingCapabilities.cs" />
     <Compile Include="Metadata\Drawings\Cadence\DrawingCounter.cs" />
     <Compile Include="Metadata\Drawings\DrawingCircle.cs" />
     <Compile Include="Metadata\Drawings\CoordinateSystem\DrawingCoordinateSystem.cs" />
-    <Compile Include="Metadata\Drawings\Styling\DrawingStyle.cs" />
     <Compile Include="Metadata\Drawings\DrawingSVG.cs" />
     <Compile Include="Metadata\Drawings\DrawingToolCoordinateSystem.cs" />
     <Compile Include="Metadata\Drawings\DrawingToolMagnifier.cs" />
@@ -736,18 +744,9 @@
     <Compile Include="Metadata\Interfaces\IMeasurable.cs" />
     <Compile Include="Metadata\Interfaces\IScalable.cs" />
     <Compile Include="Metadata\Interfaces\ITrackable.cs" />
-    <Compile Include="Metadata\Drawings\RoundedRectangle.cs" />
+    <Compile Include="Metadata\Drawings\Helpers\RoundedRectangle.cs" />
     <Compile Include="Metadata\Drawings\DrawingSpotlightItem.cs" />
     <Compile Include="Metadata\Drawings\DrawingSpotlight.cs" />
-    <Compile Include="Metadata\Drawings\Styling\AbstractStyleElement.cs" />
-    <Compile Include="Metadata\Drawings\Styling\StyleElementColor.cs" />
-    <Compile Include="Metadata\Drawings\Styling\StyleElementInt.cs" />
-    <Compile Include="Metadata\Drawings\Styling\StyleElementGridDivisions.cs" />
-    <Compile Include="Metadata\Drawings\Styling\StyleElementLineEnding.cs" />
-    <Compile Include="Metadata\Drawings\Styling\StyleElementLineSize.cs" />
-    <Compile Include="Metadata\Drawings\Styling\StyleElementPenSize.cs" />
-    <Compile Include="Metadata\Drawings\Styling\StyleElementTrackShape.cs" />
-    <Compile Include="Metadata\Drawings\Styling\StyleHelper.cs" />
     <Compile Include="Metadata\DrawingToolbar\ToolManager.cs" />
     <Compile Include="Exporters\Spreadsheet\ExporterODS.cs" />
     <Compile Include="Exporters\Spreadsheet\SpreadsheetExportFormat.cs" />
