Refactoring styling system (mostly renaming and comments)
- renamed style to style elements and styleHelper to style data.
- clarified roles.
- removed superfluous binding delegates, renamed the corresponding functions to Get and Set.

--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -431,21 +431,21 @@
     <Compile Include="Metadata\Styling\AbstractStyleElement.cs" />
     <Compile Include="Metadata\Drawings\Helpers\ArrowHelper.cs" />
     <Compile Include="Metadata\Styling\Types\Bicolor.cs" />
-    <Compile Include="Metadata\Styling\DrawingStyle.cs" />
+    <Compile Include="Metadata\Styling\StyleElements.cs" />
     <Compile Include="Metadata\Styling\Types\LineEnding.cs" />
     <Compile Include="Metadata\Styling\Types\LineShape.cs" />
     <Compile Include="Metadata\Styling\Types\PenShape.cs" />
-    <Compile Include="Metadata\Styling\Editors\StyleElementColor.cs" />
-    <Compile Include="Metadata\Styling\Editors\StyleElementFontSize.cs" />
-    <Compile Include="Metadata\Styling\Editors\StyleElementInt.cs" />
-    <Compile Include="Metadata\Styling\Editors\StyleElementLineEnding.cs" />
-    <Compile Include="Metadata\Styling\Editors\StyleElementLineShape.cs" />
-    <Compile Include="Metadata\Styling\Editors\StyleElementLineSize.cs" />
-    <Compile Include="Metadata\Styling\Editors\StyleElementPenShape.cs" />
-    <Compile Include="Metadata\Styling\Editors\StyleElementPenSize.cs" />
-    <Compile Include="Metadata\Styling\Editors\StyleElementToggle.cs" />
-    <Compile Include="Metadata\Styling\Editors\StyleElementTrackShape.cs" />
-    <Compile Include="Metadata\Styling\StyleMaster.cs" />
+    <Compile Include="Metadata\Styling\Elements\StyleElementColor.cs" />
+    <Compile Include="Metadata\Styling\Elements\StyleElementFontSize.cs" />
+    <Compile Include="Metadata\Styling\Elements\StyleElementInt.cs" />
+    <Compile Include="Metadata\Styling\Elements\StyleElementLineEnding.cs" />
+    <Compile Include="Metadata\Styling\Elements\StyleElementLineShape.cs" />
+    <Compile Include="Metadata\Styling\Elements\StyleElementLineSize.cs" />
+    <Compile Include="Metadata\Styling\Elements\StyleElementPenShape.cs" />
+    <Compile Include="Metadata\Styling\Elements\StyleElementPenSize.cs" />
+    <Compile Include="Metadata\Styling\Elements\StyleElementToggle.cs" />
+    <Compile Include="Metadata\Styling\Elements\StyleElementTrackShape.cs" />
+    <Compile Include="Metadata\Styling\StyleData.cs" />
     <Compile Include="Metadata\Styling\StyleToggleVariant.cs" />
     <Compile Include="Metadata\Styling\Types\TrackShape.cs" />
     <Compile Include="Metadata\Styling\Types\TrackShapeConverter.cs" />
@@ -747,7 +747,7 @@
     <Compile Include="Metadata\Drawings\Helpers\RoundedRectangle.cs" />
     <Compile Include="Metadata\Drawings\DrawingSpotlightItem.cs" />
     <Compile Include="Metadata\Drawings\DrawingSpotlight.cs" />
-    <Compile Include="Metadata\DrawingToolbar\ToolManager.cs" />
+    <Compile Include="Metadata\ToolManager.cs" />
     <Compile Include="Exporters\Spreadsheet\ExporterODS.cs" />
     <Compile Include="Exporters\Spreadsheet\SpreadsheetExportFormat.cs" />
     <Compile Include="PlayerScreen\FrameServerPlayer.cs" />
