WIP: Implementation of style configuration in side panel.
- Save status of side panel visibility in prefs.
- show selected drawing style conf in side panel.
- small refactoring of drawing selection functions.
- Pass drawing id in DrawingDeleted event.
- Pass the style data target property and value in ValueChanged events.
- Style data now returns whether the property was updated or not.
- Removed SetStyleAsDefault menus and code since this is now the default behavior on any change.
- Added functions to prevent duplicated mementos being pushed to the history stack.

--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -448,6 +448,18 @@
     <Compile Include="Metadata\Styling\StyleToggleVariant.cs" />
     <Compile Include="Metadata\Styling\Types\TrackShape.cs" />
     <Compile Include="Metadata\Styling\Types\TrackShapeConverter.cs" />
+    <Compile Include="PlayerScreen\Controls\SidePanelControls\StyleConfigurator.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PlayerScreen\Controls\SidePanelControls\StyleConfigurator.Designer.cs">
+      <DependentUpon>StyleConfigurator.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PlayerScreen\Controls\SidePanels\SidePanelDrawing.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PlayerScreen\Controls\SidePanels\SidePanelDrawing.Designer.cs">
+      <DependentUpon>SidePanelDrawing.cs</DependentUpon>
+    </Compile>
     <Compile Include="PointerManager.cs" />
     <Compile Include="ScreenPointerManager.cs" />
     <Compile Include="Metadata\Drawings\DrawingRectangle.cs" />
@@ -548,10 +560,10 @@
     <Compile Include="Metadata\Serialization\MeasurementSerializationHelper.cs" />
     <Compile Include="Measurement\CameraMotion\CameraTransformer.cs" />
     <Compile Include="NativeMethods.cs" />
-    <Compile Include="PlayerScreen\Controls\SidePanels\KeyframeCommentBox.cs">
+    <Compile Include="PlayerScreen\Controls\SidePanelControls\KeyframeCommentBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="PlayerScreen\Controls\SidePanels\KeyframeCommentBox.Designer.cs">
+    <Compile Include="PlayerScreen\Controls\SidePanelControls\KeyframeCommentBox.Designer.cs">
       <DependentUpon>KeyframeCommentBox.cs</DependentUpon>
     </Compile>
     <Compile Include="PlayerScreen\Events\KeyframeAddEventArgs.cs" />
@@ -1081,8 +1093,14 @@
     <EmbeddedResource Include="Measurement\LensDistortion\FormCalibrateDistortion.resx">
       <DependentUpon>FormCalibrateDistortion.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PlayerScreen\Controls\SidePanels\KeyframeCommentBox.resx">
+    <EmbeddedResource Include="PlayerScreen\Controls\SidePanelControls\StyleConfigurator.resx">
+      <DependentUpon>StyleConfigurator.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PlayerScreen\Controls\SidePanelControls\KeyframeCommentBox.resx">
       <DependentUpon>KeyframeCommentBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PlayerScreen\Controls\SidePanels\SidePanelDrawing.resx">
+      <DependentUpon>SidePanelDrawing.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PlayerScreen\Controls\SidePanels\SidePanelKeyframes.resx">
       <DependentUpon>SidePanelKeyframes.cs</DependentUpon>
