Improve the UX of the key frame cards in the side panel.

--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -2212,6 +2212,24 @@
   <ItemGroup>
     <None Include="Resources\1f632.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\close-round.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\close-square.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\close-square-red.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\keyframe-time2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\keyframe-bookmark.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\keyframe-comment.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="FixAL1703Warning" BeforeTargets="GenerateSatelliteAssemblies" Condition="'$(PlatformTarget)' == 'x64'">
     <Message Text="Adjusting SDK tools directory to use x64 version of AL.EXE" />
