Refactoring Tracking parameters
TrackingParameters is now under Services and is responsible for serialization of the tracking parameters for prefs as well as individual drawings.
Moved All tracking related classes out of the "Measurement" folder into a "Tracking" folder.
Removed TrackingProfile and TrackerParameterUnit classes, replaced by the new TrackingParameters.
Removed the Tracking tab under preferences as it no longer serves any purposes since the default parameters are always updated from last usage.
Removed the duplicate variables in TrackerBlock and use the parameters object directly.
DrawingTrack is no longer an IScalable since the concept of initializing the tracking parameters as a percentage of image size doesn't exist anymore.

--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -381,7 +381,6 @@
     <Compile Include="Measurement\Geometry\SegmentF.cs" />
     <Compile Include="Measurement\Geometry\SVD.cs" />
     <Compile Include="Measurement\Geometry\Vector3.cs" />
-    <Compile Include="Measurement\Tracking\TrackingAlgorithm.cs" />
     <Compile Include="Metadata\DrawingManager\DrawingManager`1.cs" />
     <Compile Include="Metadata\Drawings\Chrono\DrawingChronoMulti.cs" />
     <Compile Include="Metadata\Drawings\Chrono\ChronoColumns.cs" />
@@ -820,7 +819,6 @@
     <Compile Include="Measurement\Trackability\Tracker.cs" />
     <Compile Include="Measurement\Trackability\TrackabilityManager.cs" />
     <Compile Include="Measurement\Trackability\TrackablePoint.cs" />
-    <Compile Include="Measurement\Trackability\TrackerParameters.cs" />
     <Compile Include="Measurement\Trackability\TrackFrame.cs" />
     <Compile Include="Measurement\Trackability\TrackingContext.cs" />
     <Compile Include="Measurement\Trackability\TrackResult.cs" />
@@ -2279,6 +2277,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\circular_marker.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Tracking\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="FixAL1703Warning" BeforeTargets="GenerateSatelliteAssemblies" Condition="'$(PlatformTarget)' == 'x64'">
