WIP tracking panel.
Remove zooming parameter from hit testing and moving of drawings. (This is an attempt at converging the two image-to-viewport transformer classes).
Fix issue with scale of hit test in the tracking mini viewport.
Perfs in tracking mini viewport. Only update main viewport when the manipulation is finished.
Fix bug that was saving the wrong boolean for IsInteractiveTrack.
Hide recording indicator.

--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -398,6 +398,7 @@
     <Compile Include="Exporters\Spreadsheet\ExporterCSVTrajectory.cs" />
     <Compile Include="Exporters\Spreadsheet\ExporterJSON.cs" />
     <Compile Include="Exporters\Spreadsheet\ExporterXSLX.cs" />
+    <Compile Include="Metadata\Events\DrawingAction.cs" />
     <Compile Include="Metadata\Interfaces\IDrawingHostView.cs" />
     <Compile Include="Measurement\Geometry\AngleOptions.cs" />
     <Compile Include="Measurement\Geometry\Circle.cs" />
