--- a/Kinovea/Kinovea.csproj
+++ b/Kinovea/Kinovea.csproj
@@ -345,6 +345,7 @@
     <None Include="app.manifest">
       <SubType>Designer</SubType>
     </None>
+    <None Include="building-blocks.rtf" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
