Update System.IO.Packaging, update version number in install scripts, revert to default output path for debug build of Kinovea.Camera.GenICam.

--- a/Kinovea.Camera.GenICam/Kinovea.Camera.GenICam.csproj
+++ b/Kinovea.Camera.GenICam/Kinovea.Camera.GenICam.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>%AppData%\Kinovea\Plugins\Camera\GenICam\</OutputPath>
+    <OutputPath>bin\x64\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
