--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -819,7 +819,7 @@
     <Compile Include="Tracking\Trackability\Tracker.cs" />
     <Compile Include="Tracking\Trackability\TrackabilityManager.cs" />
     <Compile Include="Tracking\Trackability\TrackablePoint.cs" />
-    <Compile Include="Tracking\Trackability\TrackFrame.cs" />
+    <Compile Include="Tracking\Trackability\TrackingTemplate.cs" />
     <Compile Include="Tracking\Trackability\TrackingContext.cs" />
     <Compile Include="Tracking\Trackability\TrackResult.cs" />
     <Compile Include="Tracking\Tracking\AbstractTracker.cs" />
