--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -822,11 +822,11 @@
     <Compile Include="Tracking\Trackability\TrackablePoint.cs" />
     <Compile Include="Tracking\Trackability\TrackingTemplate.cs" />
     <Compile Include="Tracking\Trackability\TrackingContext.cs" />
-    <Compile Include="Tracking\Trackability\TrackResult.cs" />
+    <Compile Include="Tracking\Tracking\TrackResult.cs" />
     <Compile Include="Tracking\Tracking\AbstractTracker.cs" />
     <Compile Include="Tracking\Tracking\AbstractTrackPoint.cs" />
     <Compile Include="Tracking\Tracking\DrawingTrack.cs" />
-    <Compile Include="Tracking\Tracking\TrackerBlock2.cs" />
+    <Compile Include="Tracking\Tracking\TrackerTemplateMatching.cs" />
     <Compile Include="Tracking\Tracking\TrackPointBlock.cs" />
     <Compile Include="UserInterface\DropDownMenuContainer.cs">
       <SubType>Form</SubType>
