--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -625,8 +625,6 @@
     <Compile Include="Measurement\Kinematics\FilteringResult.cs" />
     <Compile Include="Measurement\Kinematics\LinearKinematics.cs" />
     <Compile Include="Measurement\Kinematics\StatsHelper.cs" />
-    <Compile Include="Tracking\Tracking\TrackColorCycler.cs" />
-    <Compile Include="Tracking\Tracking\TrackMarker.cs" />
     <Compile Include="Tracking\Tracking\TrackStatus.cs" />
     <Compile Include="Measurement\LensDistortion\FormCalibrateDistortion.cs">
       <SubType>Form</SubType>
@@ -816,11 +814,11 @@
     <Compile Include="Metadata\Metadata.cs" />
     <Compile Include="Metadata\Timeline.cs" />
     <Compile Include="Tracking\Trackability\DrawingTracker.cs" />
-    <Compile Include="Tracking\Trackability\PositionningSource.cs" />
+    <Compile Include="Tracking\Tracking\TrackingSource.cs" />
     <Compile Include="Tracking\Trackability\Tracker.cs" />
     <Compile Include="Tracking\Trackability\TrackabilityManager.cs" />
     <Compile Include="Tracking\Trackability\TrackablePoint.cs" />
-    <Compile Include="Tracking\Trackability\TrackingTemplate.cs" />
+    <Compile Include="Tracking\Tracking\TrackingTemplate.cs" />
     <Compile Include="Tracking\Trackability\TrackingContext.cs" />
     <Compile Include="Tracking\Tracking\TemplateMatchResult.cs" />
     <Compile Include="Tracking\Tracking\AbstractTracker.cs" />
