--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -625,8 +625,8 @@
     <Compile Include="Measurement\Kinematics\FilteringResult.cs" />
     <Compile Include="Measurement\Kinematics\LinearKinematics.cs" />
     <Compile Include="Measurement\Kinematics\StatsHelper.cs" />
-    <Compile Include="Tracking\Tracking\TrackerCircle.cs" />
-    <Compile Include="Tracking\Tracking\TrackedCircle.cs" />
+    <Compile Include="Tracking\Tracking\Circle\TrackerCircle.cs" />
+    <Compile Include="Tracking\Tracking\Circle\TrackedCircle.cs" />
     <Compile Include="Tracking\Tracking\TrackStatus.cs" />
     <Compile Include="Measurement\LensDistortion\FormCalibrateDistortion.cs">
       <SubType>Form</SubType>
@@ -820,12 +820,12 @@
     <Compile Include="Tracking\Trackability\Tracker.cs" />
     <Compile Include="Tracking\Trackability\TrackabilityManager.cs" />
     <Compile Include="Tracking\Trackability\TrackablePoint.cs" />
-    <Compile Include="Tracking\Tracking\TrackingTemplate.cs" />
+    <Compile Include="Tracking\Tracking\TemplateMatching\TrackingTemplate.cs" />
     <Compile Include="Tracking\Trackability\TrackingContext.cs" />
-    <Compile Include="Tracking\Tracking\TemplateMatchResult.cs" />
+    <Compile Include="Tracking\Tracking\TemplateMatching\TemplateMatchResult.cs" />
     <Compile Include="Tracking\Tracking\AbstractTracker.cs" />
     <Compile Include="Tracking\Tracking\DrawingTrack.cs" />
-    <Compile Include="Tracking\Tracking\TrackerTemplateMatching.cs" />
+    <Compile Include="Tracking\Tracking\TemplateMatching\TrackerTemplateMatching.cs" />
     <Compile Include="UserInterface\DropDownMenuContainer.cs">
       <SubType>Form</SubType>
     </Compile>
