Add back a trajectory to text export following the gnuplot format.

--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -338,6 +338,7 @@
     <Compile Include="Exporters\Images\ExporterImage.cs" />
     <Compile Include="Exporters\Images\ExporterImageSequence.cs" />
     <Compile Include="Exporters\Spreadsheet\ExporterCSVChrono.cs" />
+    <Compile Include="Exporters\Spreadsheet\ExporterTXTTrajectory.cs" />
     <Compile Include="Exporters\Video\ExporterVideo.cs" />
     <Compile Include="Exporters\Video\FormConfigureExportVideoSlideshow.cs">
       <SubType>Form</SubType>
