--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,55 +2,43 @@ name: Build Kinovea
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ] # or your main branch
   pull_request:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: windows-latest
-    
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Add MSBuild to PATH
-      uses: microsoft/setup-msbuild@v1.3.1
-      
-    - name: Setup Visual Studio Components
-      uses: microsoft/setup-msbuild@v1.3.1
-      with:
-        vs-version: '[16.11,16.12)'  # VS 2019
-        vs-prerelease: false
-        msbuild-architecture: x64
-    
-    - name: Install Visual Studio dependencies
-      shell: powershell
-      run: |
-        # Install VS components using vs_installer.exe
-        Start-Process -Wait -FilePath "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vs_installer.exe" `
-          -ArgumentList "modify --installPath ""C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise"" `
-            --add Microsoft.VisualStudio.Workload.ManagedDesktop `
-            --add Microsoft.VisualStudio.Workload.NativeDesktop `
-            --add Microsoft.Net.Component.4.8.SDK `
-            --add Microsoft.Net.Component.4.8.TargetingPack `
-            --add Microsoft.VisualStudio.Component.VC.CLI.Support `
-            --quiet --norestart"
-    
-    - name: Restore NuGet packages
-      run: nuget restore Kinovea.sln
-    
-    - name: Build Solution
-      run: |
-        msbuild.exe Kinovea.sln /p:Configuration=Release /p:Platform="Any CPU" /m
-    
-    - name: Upload Build Artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: kinovea-build
-        path: |
-          Kinovea/bin/Release/*.exe
-          Kinovea/bin/Release/*.dll
-          Kinovea/bin/Release/*.config
-        compression: zip
-        retention-days: 90
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Visual Studio Build Tools
+        uses: actions/setup-msbuild@v2   #or setup-visualstudio, test both
+        with:
+          vs-version: '2019' # or '16.0'
+          msbuild-architecture: 'x64' # Optional, but good to specify
+          include-prereleases: false  # Or 'true' if needed for a very specific VS version
+          # If setup-visualstudio, try these too
+          #components: Microsoft.Component.MSBuild
+          #vs-prerelease: false
+
+      - name: Install .NET Framework 4.8
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '4.8'  #This might also not be necessary, test without it first
+
+      - name: Restore NuGet packages
+        run: nuget restore Kinovea.sln
+
+      - name: Build Solution
+        run: |
+          msbuild Kinovea.sln /p:Configuration=Release /p:Platform="Any CPU"
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Kinovea-Build
+          path: Kinovea/bin/Release # Adjust this path if needed.  Find the actual output directory.
+          if-no-files-found: error
